UI: make sure scrollbar doesn't go below the deck list's bottom

--- a/core/src/css/component/decktracker/overlay/decktracker-deck-list.component.scss
+++ b/core/src/css/component/decktracker/overlay/decktracker-deck-list.component.scss
@@ -41,6 +41,7 @@
 		.ps__rail-y.ps__rail-y {
 			display: none;
 			top: 0 !important;
+			margin-bottom: 10px;
 		}
 	}
 
